--- a/.env_all
+++ b/.env_all
@@ -1,31 +1,21 @@
 # COMMENT
-DB_MYSQL_VERSION=5.7
-DB_MYSQL_PORT=3306
-DB_MYSQL_PASSWORD=123456
-DB_MYSQL_NAME=drupal
-DB_MYSQL_USER=drupal
-DB_MYSQL_HOST=mysql
+DB_ETCD_VERSION=3.4.9
+DB_ETCD_PORT=2379
 
-MQ_KAFKA_PORT=9092
-MQ_RABBITMQ_PORT=5672
-
-DB_POSTGRESQL_VERSION=9.5
-DB_REDIS_VERSION=5.0
-
-APP_VERSION=latest
+APP_DASHBOARD_VERSION=2.7
+APP_VERSION=2.6-alpine
 APP_PORT=9001
 
 # more than two ports
-APP_HTTP_PORT=9001
-APP_SSH_PORT=9002
+APP_DASHBOARD_PORT=9001
+
 
 APP_PASSWORD_INIT=True
-APP_USER=
-APP_PASSWORD=
-APP_CONTAINER_NAME=onlyoffice
-APP_NETWORK=onlyoffice
-APP_SITE_NAME=Gost blog
-APP_SITE_URL=appname.example.com
+APP_USER=admin
+APP_PASSWORD=admin
+
+APP_CONTAINER_NAME=apisix
+APP_NETWORK=apisix
 
 VOLUMES_PATH_PREFIX=./volumes
 DOMAIN=appname.example.com
