--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@ APP_USER=admin
 APP_PASSWORD=admin
 
 APP_CONTAINER_NAME=apisix
-APP_NETWORK=apisix
+APP_NETWORK=websoft9
 
 VOLUMES_PATH_PREFIX=./volumes
 DOMAIN=appname.example.com
