--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 # COMMENT
+POWER_PASSWORD=UGz0IARz117ssO%
 DB_ETCD_VERSION=3.4.9
 DB_ETCD_PORT=2379
 
@@ -12,7 +13,7 @@ APP_DASHBOARD_PORT=9001
 
 APP_PASSWORD_INIT=True
 APP_USER=admin
-APP_PASSWORD=admin
+APP_PASSWORD=$POWER_PASSWORD
 
 APP_CONTAINER_NAME=apisix
 APP_NETWORK=websoft9
