--- a/.env
+++ b/.env
@@ -5,7 +5,7 @@ DB_ETCD_PORT=2379
 
 APP_DASHBOARD_VERSION=2.7
 APP_VERSION=2.6-alpine
-APP_PORT=9001
+APP_HTTP_PORT=9001
 
 # more than two ports
 APP_DASHBOARD_PORT=9001
